# seq_nms

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  run_cpp_tests.sh  setup.cfg  setup.py
.github/workflows/: main.yml  master.yml
pt_seq_nms/: __init__.py  seq_nms.py
pt_seq_nms/csrc/: box_utils.cpp  custom_types.h  op.cpp  seq_nms.cpp  seq_nms.h  sequence_utils.cpp  sequence_utils.h
scripts/: ci_checks.sh  run_cpp_tests.sh  run_format.sh  speed_test.py
src/: CMakeLists.txt  box_utils.h  custom_types.h  seq_nms.cpp  seq_nms.h  sequence_utils.cpp  sequence_utils.h
tests/: CMakeLists.txt  test_box_utils.h  test_jit_exports.py  test_seq_nms.h  test_seq_nms.py  test_sequence_utils.h  test_torch_exports.py  tests.cpp  utils.cpp
tests/cpp/: test_box_utils.h  test_seq_nms.h  tests.cpp
